--- a/newlib/libc/Makefile.in
+++ b/newlib/libc/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -92,61 +92,30 @@ sys_dir = @sys_dir@
 
 AUTOMAKE_OPTIONS = cygnus
 
-@HAVE_POSIX_DIR_TRUE@POSIX_SUBDIR = @HAVE_POSIX_DIR_TRUE@posix
+@HAVE_POSIX_DIR_TRUE@POSIX_SUBDIR = posix
 
-@HAVE_SIGNAL_DIR_TRUE@SIGNAL_SUBDIR = @HAVE_SIGNAL_DIR_TRUE@signal
+@HAVE_SIGNAL_DIR_TRUE@SIGNAL_SUBDIR = signal
 
-@HAVE_SYSCALL_DIR_TRUE@SYSCALLS_SUBDIR = @HAVE_SYSCALL_DIR_TRUE@syscalls
+@HAVE_SYSCALL_DIR_TRUE@SYSCALLS_SUBDIR = syscalls
 
-@HAVE_UNIX_DIR_TRUE@UNIX_SUBDIR = @HAVE_UNIX_DIR_TRUE@unix
+@HAVE_UNIX_DIR_TRUE@UNIX_SUBDIR = unix
 
 # The order of SUBDIRS is important for the integrated documentation.
 # Do not change the order without considering the doc impact.
-SUBDIRS = stdlib ctype stdio string $(SIGNAL_SUBDIR) time locale sys reent \
-	errno misc machine $(UNIX_SUBDIR) $(POSIX_SUBDIR) $(SYSCALLS_SUBDIR) .
+SUBDIRS = stdlib ctype stdio string $(SIGNAL_SUBDIR) time locale sys reent 	errno misc machine $(UNIX_SUBDIR) $(POSIX_SUBDIR) $(SYSCALLS_SUBDIR) .
 
 
 noinst_DATA = $(CRT0)
 
-@USE_LIBTOOL_TRUE@noinst_LTLIBRARIES = @USE_LIBTOOL_TRUE@libc.la
-@USE_LIBTOOL_TRUE@SUBLIBS = @USE_LIBTOOL_TRUE@\
-@USE_LIBTOOL_TRUE@	stdlib/libstdlib.$(aext) \
-@USE_LIBTOOL_TRUE@	ctype/libctype.$(aext) \
-@USE_LIBTOOL_TRUE@	stdio/libstdio.$(aext) \
-@USE_LIBTOOL_TRUE@	string/libstring.$(aext) \
-@USE_LIBTOOL_TRUE@	$(LIBC_SIGNAL_LIB) \
-@USE_LIBTOOL_TRUE@	time/libtime.$(aext) \
-@USE_LIBTOOL_TRUE@	locale/liblocale.$(aext) \
-@USE_LIBTOOL_TRUE@	$(LIBC_SYS_LIB) \
-@USE_LIBTOOL_TRUE@	reent/libreent.$(aext) \
-@USE_LIBTOOL_TRUE@	errno/liberrno.$(aext) \
-@USE_LIBTOOL_TRUE@	misc/libmisc.$(aext) \
-@USE_LIBTOOL_TRUE@	$(LIBC_MACHINE_LIB) \
-@USE_LIBTOOL_TRUE@	$(LIBC_UNIX_LIB) \
-@USE_LIBTOOL_TRUE@	$(LIBC_POSIX_LIB) \
-@USE_LIBTOOL_TRUE@	$(LIBC_SYSCALL_LIB)
-@USE_LIBTOOL_FALSE@SUBLIBS = @USE_LIBTOOL_FALSE@\
-@USE_LIBTOOL_FALSE@	stdlib/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	ctype/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	stdio/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	string/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	$(LIBC_SIGNAL_LIB) \
-@USE_LIBTOOL_FALSE@	time/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	locale/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	$(LIBC_SYS_LIB) \
-@USE_LIBTOOL_FALSE@	reent/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	errno/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	misc/lib.$(aext) \
-@USE_LIBTOOL_FALSE@	$(LIBC_MACHINE_LIB) \
-@USE_LIBTOOL_FALSE@	$(LIBC_UNIX_LIB) \
-@USE_LIBTOOL_FALSE@	$(LIBC_POSIX_LIB) \
-@USE_LIBTOOL_FALSE@	$(LIBC_SYSCALL_LIB)
-@USE_LIBTOOL_FALSE@noinst_LIBRARIES = @USE_LIBTOOL_FALSE@libc.a
+@USE_LIBTOOL_TRUE@noinst_LTLIBRARIES = libc.la
+@USE_LIBTOOL_TRUE@SUBLIBS = 	stdlib/libstdlib.$(aext) 	ctype/libctype.$(aext) 	stdio/libstdio.$(aext) 	string/libstring.$(aext) 	$(LIBC_SIGNAL_LIB) 	time/libtime.$(aext) 	locale/liblocale.$(aext) 	$(LIBC_SYS_LIB) 	reent/libreent.$(aext) 	errno/liberrno.$(aext) 	misc/libmisc.$(aext) 	$(LIBC_MACHINE_LIB) 	$(LIBC_UNIX_LIB) 	$(LIBC_POSIX_LIB) 	$(LIBC_SYSCALL_LIB)
+@USE_LIBTOOL_FALSE@SUBLIBS = 	stdlib/lib.$(aext) 	ctype/lib.$(aext) 	stdio/lib.$(aext) 	string/lib.$(aext) 	$(LIBC_SIGNAL_LIB) 	time/lib.$(aext) 	locale/lib.$(aext) 	$(LIBC_SYS_LIB) 	reent/lib.$(aext) 	errno/lib.$(aext) 	misc/lib.$(aext) 	$(LIBC_MACHINE_LIB) 	$(LIBC_UNIX_LIB) 	$(LIBC_POSIX_LIB) 	$(LIBC_SYSCALL_LIB)
+@USE_LIBTOOL_FALSE@noinst_LIBRARIES = libc.a
 
 libc_la_LDFLAGS = -Xcompiler -nostdlib
 
 @USE_LIBTOOL_TRUE@libc_la_SOURCES = 
-@USE_LIBTOOL_TRUE@libc_la_LIBADD = @USE_LIBTOOL_TRUE@$(SUBLIBS)
+@USE_LIBTOOL_TRUE@libc_la_LIBADD = $(SUBLIBS)
 
 info_TEXINFOS = libc.texinfo
 
@@ -154,20 +123,10 @@ info_TEXINFOS = libc.texinfo
 # builds .def files.  We don't list subdirectories which don't build
 # .def files; if the list of subdirectories changes, we must change
 # this as well.
-SUBDEFS = \
-	stdlib/stmp-def \
-	ctype/stmp-def \
-	stdio/stmp-def \
-	string/stmp-def \
-	$(LIBC_SIGNAL_DEF) \
-	time/stmp-def \
-	locale/stmp-def \
-	reent/stmp-def \
-	misc/stmp-def
+SUBDEFS =  	stdlib/stmp-def 	ctype/stmp-def 	stdio/stmp-def 	string/stmp-def 	$(LIBC_SIGNAL_DEF) 	time/stmp-def 	locale/stmp-def 	reent/stmp-def 	misc/stmp-def
 
 
-CLEANFILES = $(CRT0) \
-	sigset.texi stmp-sigset tmp.texi targetdep.tex stmp-targetdep
+CLEANFILES = $(CRT0) 	sigset.texi stmp-sigset tmp.texi targetdep.tex stmp-targetdep
 
 
 ACLOCAL_AMFLAGS = -I ..
@@ -209,7 +168,7 @@ DIST_COMMON =  Makefile.am Makefile.in aclocal.m4 configure configure.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 DIST_SUBDIRS =  stdlib ctype stdio string signal time locale sys reent \
 errno misc machine unix posix syscalls .
@@ -367,7 +326,7 @@ uninstall-info:
 	else ii=; fi; \
 	list='$(INFO_DEPS)'; \
 	for file in $$list; do \
-	  test -z "$ii" \
+	  test -z "$$ii" \
 	    || install-info --info-dir=$(DESTDIR)$(infodir) --remove $$file; \
 	done
 	@$(NORMAL_UNINSTALL)
@@ -441,7 +400,7 @@ maintainer-clean-recursive:
 	dot_seen=no; \
 	rev=''; list='$(SUBDIRS)'; for subdir in $$list; do \
 	  rev="$$subdir $$rev"; \
-	  test "$$subdir" = "." && dot_seen=yes; \
+	  test "$$subdir" != "." || dot_seen=yes; \
 	done; \
 	test "$$dot_seen" = "no" && rev=". $$rev"; \
 	target=`echo $@ | sed s/-recursive//`; \
