--- a/newlib/libc/reent/Makefile.in
+++ b/newlib/libc/reent/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -95,49 +95,19 @@ AUTOMAKE_OPTIONS = cygnus
 
 INCLUDES = $(NEWLIB_CFLAGS) $(CROSS_CFLAGS) $(TARGET_CFLAGS)
 
-LIB_SOURCES = \
-	closer.c \
-	reent.c \
-	impure.c \
-	execr.c \
-	fstatr.c \
-	linkr.c \
-	lseekr.c \
-	openr.c \
-	readr.c \
-	signalr.c \
-	signgam.c \
-	sbrkr.c \
-	statr.c \
-	timer.c \
-	unlinkr.c \
-	writer.c
+LIB_SOURCES =  	closer.c 	reent.c 	impure.c 	execr.c 	fstatr.c 	linkr.c 	lseekr.c 	openr.c 	readr.c 	signalr.c 	signgam.c 	sbrkr.c 	statr.c 	timer.c 	unlinkr.c 	writer.c
 
 
 libreent_la_LDFLAGS = -Xcompiler -nostdlib
 
-@USE_LIBTOOL_TRUE@noinst_LTLIBRARIES = @USE_LIBTOOL_TRUE@libreent.la
-@USE_LIBTOOL_TRUE@libreent_la_SOURCES = @USE_LIBTOOL_TRUE@$(LIB_SOURCES)
-@USE_LIBTOOL_TRUE@noinst_DATA = @USE_LIBTOOL_TRUE@objectlist.awk.in
+@USE_LIBTOOL_TRUE@noinst_LTLIBRARIES = libreent.la
+@USE_LIBTOOL_TRUE@libreent_la_SOURCES = $(LIB_SOURCES)
+@USE_LIBTOOL_TRUE@noinst_DATA = objectlist.awk.in
 @USE_LIBTOOL_FALSE@noinst_DATA = 
-@USE_LIBTOOL_FALSE@noinst_LIBRARIES = @USE_LIBTOOL_FALSE@lib.a
-@USE_LIBTOOL_FALSE@lib_a_SOURCES = @USE_LIBTOOL_FALSE@$(LIB_SOURCES)
+@USE_LIBTOOL_FALSE@noinst_LIBRARIES = lib.a
+@USE_LIBTOOL_FALSE@lib_a_SOURCES = $(LIB_SOURCES)
 
-CHEWOUT_FILES = \
-	closer.def \
-	reent.def \
-	execr.def \
-	fstatr.def \
-	linkr.def \
-	lseekr.def \
-	openr.def \
-	readr.def \
-	signalr.def \
-	sbrkr.def \
-	statr.def \
-	timer.def \
-	unlinkr.def \
-	writer.def
+CHEWOUT_FILES =  	closer.def 	reent.def 	execr.def 	fstatr.def 	linkr.def 	lseekr.def 	openr.def 	readr.def 	signalr.def 	sbrkr.def 	statr.def 	timer.def 	unlinkr.def 	writer.def
 
 
 SUFFIXES = .def .h
@@ -178,7 +148,7 @@ DIST_COMMON =  Makefile.am Makefile.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 SOURCES = $(lib_a_SOURCES) $(libreent_la_SOURCES)
 OBJECTS = $(lib_a_OBJECTS) $(libreent_la_OBJECTS)
