--- a/newlib/libc/stdlib/Makefile.in
+++ b/newlib/libc/stdlib/Makefile.in
@@ -1,6 +1,6 @@
-# Makefile.in generated automatically by automake 1.4 from Makefile.am
+# Makefile.in generated automatically by automake 1.4-p5 from Makefile.am
 
-# Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1994, 1995-8, 1999, 2001 Free Software Foundation, Inc.
 # This Makefile.in is free software; the Free Software Foundation
 # gives unlimited permission to copy and/or distribute it,
 # with or without modifications, as long as this notice is preserved.
@@ -95,138 +95,25 @@ AUTOMAKE_OPTIONS = cygnus
 
 INCLUDES = $(NEWLIB_CFLAGS) $(CROSS_CFLAGS) $(TARGET_CFLAGS)
 
-LIB_SOURCES = \
-	__adjust.c 	\
-	__exp10.c 	\
-	__ten_mu.c 	\
-	abort.c  	\
-	abs.c 		\
-	assert.c  	\
-	atexit.c	\
-	atof.c 		\
-	atoff.c		\
-	atoi.c  	\
-	atol.c		\
-	bsearch.c	\
-	calloc.c	\
-	div.c  		\
-	drand48.c	\
-	dtoa.c 		\
-	dtoastub.c 	\
-	ecvtbuf.c 	\
-	efgcvt.c 	\
-	environ.c	\
-	envlock.c	\
-	eprintf.c	\
-	erand48.c	\
-	exit.c 		\
-	getenv.c  	\
-	getenv_r.c	\
-	getopt.c	\
-	jrand48.c	\
-	labs.c 		\
-	lcong48.c	\
-	ldiv.c  	\
-	ldtoa.c		\
-	lrand48.c	\
-	malign.c	\
-	malloc.c  	\
-	mblen.c		\
-	mblen_r.c	\
-	mbstowcs.c	\
-	mbstowcs_r.c	\
-	mbtowc.c	\
-	mbtowc_r.c	\
-	mlock.c		\
-	mprec.c		\
-	mrand48.c	\
-	msize.c		\
-	mstats.c	\
-	mtrim.c		\
-	nrand48.c	\
-	putenv.c	\
-	putenv_r.c	\
-	qsort.c		\
-	rand.c		\
-	rand48.c	\
-	rand_r.c	\
-	realloc.c	\
-	seed48.c	\
-	setenv.c	\
-	setenv_r.c	\
-	srand48.c	\
-	strdup.c	\
-	strdup_r.c	\
-	strtod.c	\
-	strtol.c	\
-	strtoll.c	\
-	strtoll_r.c	\
-	strtoul.c	\
-	strtoull.c	\
-	strtoull_r.c	\
-	system.c	\
-	valloc.c	\
-	wcstombs.c	\
-	wcstombs_r.c	\
-	wctomb.c	\
-	wctomb_r.c
+LIB_SOURCES =  	__adjust.c 		__exp10.c 		__ten_mu.c 		abort.c  		abs.c 			assert.c  		atexit.c		atof.c 			atoff.c			atoi.c  		atol.c			bsearch.c		div.c  			drand48.c		dtoa.c 			dtoastub.c 		ecvtbuf.c 		efgcvt.c 		environ.c		envlock.c		eprintf.c		erand48.c		exit.c 			getenv.c  		getenv_r.c		getopt.c		jrand48.c		labs.c 			lcong48.c		ldiv.c  		ldtoa.c			lrand48.c		mblen.c			mblen_r.c		mbstowcs.c		mbstowcs_r.c		mbtowc.c		mbtowc_r.c		mlock.c			mprec.c			mrand48.c		msize.c			mtrim.c			nrand48.c		putenv.c		putenv_r.c		qsort.c			rand.c			rand48.c		rand_r.c		seed48.c		setenv.c		setenv_r.c		srand48.c		strdup.c		strdup_r.c		strtod.c		strtol.c		strtoll.c		strtoll_r.c		strtoul.c		strtoull.c		strtoull_r.c		system.c		valloc.c		wcstombs.c		wcstombs_r.c		wctomb.c		wctomb_r.c
 
 
-# Because of how libtool moves objects around, mallocr must be built last.
-LIBADD_OBJS = freer.$(oext) reallocr.$(oext) callocr.$(oext) cfreer.$(oext) malignr.$(oext) \
-	vallocr.$(oext) pvallocr.$(oext) mallinfor.$(oext) mallstatsr.$(oext) msizer.$(oext) malloptr.$(oext) mallocr.$(oext)
-
+LIBADD_OBJS = 
 
 libstdlib_la_LDFLAGS = -Xcompiler -nostdlib
 
-@USE_LIBTOOL_TRUE@noinst_LTLIBRARIES = @USE_LIBTOOL_TRUE@libstdlib.la
-@USE_LIBTOOL_TRUE@libstdlib_la_SOURCES = @USE_LIBTOOL_TRUE@$(LIB_SOURCES)
-@USE_LIBTOOL_TRUE@libstdlib_la_LIBADD = @USE_LIBTOOL_TRUE@$(LIBADD_OBJS)
-@USE_LIBTOOL_TRUE@LIB_COMPILE = @USE_LIBTOOL_TRUE@$(LTCOMPILE)
-@USE_LIBTOOL_FALSE@LIB_COMPILE = @USE_LIBTOOL_FALSE@$(COMPILE)
-@USE_LIBTOOL_TRUE@noinst_DATA = @USE_LIBTOOL_TRUE@objectlist.awk.in
+@USE_LIBTOOL_TRUE@noinst_LTLIBRARIES = libstdlib.la
+@USE_LIBTOOL_TRUE@libstdlib_la_SOURCES = $(LIB_SOURCES)
+@USE_LIBTOOL_TRUE@libstdlib_la_LIBADD = $(LIBADD_OBJS)
+@USE_LIBTOOL_TRUE@LIB_COMPILE = $(LTCOMPILE)
+@USE_LIBTOOL_FALSE@LIB_COMPILE = $(COMPILE)
+@USE_LIBTOOL_TRUE@noinst_DATA = objectlist.awk.in
 @USE_LIBTOOL_FALSE@noinst_DATA = 
-@USE_LIBTOOL_FALSE@noinst_LIBRARIES = @USE_LIBTOOL_FALSE@lib.a
-@USE_LIBTOOL_FALSE@lib_a_SOURCES = @USE_LIBTOOL_FALSE@$(LIB_SOURCES)
-@USE_LIBTOOL_FALSE@lib_a_LIBADD = @USE_LIBTOOL_FALSE@$(LIBADD_OBJS)
+@USE_LIBTOOL_FALSE@noinst_LIBRARIES = lib.a
+@USE_LIBTOOL_FALSE@lib_a_SOURCES = $(LIB_SOURCES)
+@USE_LIBTOOL_FALSE@lib_a_LIBADD = $(LIBADD_OBJS)
 
-MALLOC_COMPILE = $(LIB_COMPILE) -DINTERNAL_NEWLIB
-
-CHEWOUT_FILES = \
-	abort.def	\
-	abs.def		\
-	assert.def	\
-	atexit.def	\
-	atof.def 	\
-	ecvtbuf.def	\
-	atoi.def 	\
-	bsearch.def	\
-	calloc.def	\
-	div.def		\
-	efgcvt.def 	\
-	envlock.def	\
-	exit.def	\
-	getenv.def	\
-	labs.def	\
-	ldiv.def	\
-	malloc.def	\
-	mallocr.def	\
-	mblen.def	\
-	mbstowcs.def	\
-	mbtowc.def	\
-	mlock.def	\
-	mstats.def	\
-	qsort.def	\
-	rand.def	\
-	rand48.def	\
-	strtod.def 	\
-	strtol.def 	\
-	strtoll.def 	\
-	strtoul.def 	\
-	strtoull.def 	\
-	system.def	\
-	wcstombs.def	\
-	wctomb.def	
+CHEWOUT_FILES =  	abort.def		abs.def			assert.def		atexit.def		atof.def 		ecvtbuf.def		atoi.def 		bsearch.def		div.def			efgcvt.def 		envlock.def		exit.def		getenv.def		labs.def		ldiv.def		mblen.def		mbstowcs.def		mbtowc.def		mlock.def		qsort.def		rand.def		rand48.def		strtod.def 		strtol.def 		strtoll.def 		strtoul.def 		strtoull.def 		system.def		wcstombs.def		wctomb.def	
 
 
 SUFFIXES = .def
@@ -244,49 +131,40 @@ LIBRARIES =  $(noinst_LIBRARIES)
 DEFS = @DEFS@ -I. -I$(srcdir) 
 CPPFLAGS = @CPPFLAGS@
 LIBS = @LIBS@
-@USE_LIBTOOL_FALSE@lib_a_DEPENDENCIES =  freer.$(oext) reallocr.$(oext) \
-@USE_LIBTOOL_FALSE@callocr.$(oext) cfreer.$(oext) malignr.$(oext) \
-@USE_LIBTOOL_FALSE@vallocr.$(oext) pvallocr.$(oext) mallinfor.$(oext) \
-@USE_LIBTOOL_FALSE@mallstatsr.$(oext) msizer.$(oext) malloptr.$(oext) \
-@USE_LIBTOOL_FALSE@mallocr.$(oext)
+@USE_LIBTOOL_FALSE@lib_a_DEPENDENCIES = 
 @USE_LIBTOOL_FALSE@lib_a_OBJECTS =  __adjust.o __exp10.o __ten_mu.o \
 @USE_LIBTOOL_FALSE@abort.o abs.o assert.o atexit.o atof.o atoff.o \
-@USE_LIBTOOL_FALSE@atoi.o atol.o bsearch.o calloc.o div.o drand48.o \
-@USE_LIBTOOL_FALSE@dtoa.o dtoastub.o ecvtbuf.o efgcvt.o environ.o \
-@USE_LIBTOOL_FALSE@envlock.o eprintf.o erand48.o exit.o getenv.o \
-@USE_LIBTOOL_FALSE@getenv_r.o getopt.o jrand48.o labs.o lcong48.o \
-@USE_LIBTOOL_FALSE@ldiv.o ldtoa.o lrand48.o malign.o malloc.o mblen.o \
-@USE_LIBTOOL_FALSE@mblen_r.o mbstowcs.o mbstowcs_r.o mbtowc.o \
-@USE_LIBTOOL_FALSE@mbtowc_r.o mlock.o mprec.o mrand48.o msize.o \
-@USE_LIBTOOL_FALSE@mstats.o mtrim.o nrand48.o putenv.o putenv_r.o \
-@USE_LIBTOOL_FALSE@qsort.o rand.o rand48.o rand_r.o realloc.o seed48.o \
-@USE_LIBTOOL_FALSE@setenv.o setenv_r.o srand48.o strdup.o strdup_r.o \
-@USE_LIBTOOL_FALSE@strtod.o strtol.o strtoll.o strtoll_r.o strtoul.o \
-@USE_LIBTOOL_FALSE@strtoull.o strtoull_r.o system.o valloc.o wcstombs.o \
+@USE_LIBTOOL_FALSE@atoi.o atol.o bsearch.o div.o drand48.o dtoa.o \
+@USE_LIBTOOL_FALSE@dtoastub.o ecvtbuf.o efgcvt.o environ.o envlock.o \
+@USE_LIBTOOL_FALSE@eprintf.o erand48.o exit.o getenv.o getenv_r.o \
+@USE_LIBTOOL_FALSE@getopt.o jrand48.o labs.o lcong48.o ldiv.o ldtoa.o \
+@USE_LIBTOOL_FALSE@lrand48.o mblen.o mblen_r.o mbstowcs.o mbstowcs_r.o \
+@USE_LIBTOOL_FALSE@mbtowc.o mbtowc_r.o mlock.o mprec.o mrand48.o \
+@USE_LIBTOOL_FALSE@msize.o mtrim.o nrand48.o putenv.o putenv_r.o \
+@USE_LIBTOOL_FALSE@qsort.o rand.o rand48.o rand_r.o seed48.o setenv.o \
+@USE_LIBTOOL_FALSE@setenv_r.o srand48.o strdup.o strdup_r.o strtod.o \
+@USE_LIBTOOL_FALSE@strtol.o strtoll.o strtoll_r.o strtoul.o strtoull.o \
+@USE_LIBTOOL_FALSE@strtoull_r.o system.o valloc.o wcstombs.o \
 @USE_LIBTOOL_FALSE@wcstombs_r.o wctomb.o wctomb_r.o
 LTLIBRARIES =  $(noinst_LTLIBRARIES)
 
-@USE_LIBTOOL_TRUE@libstdlib_la_DEPENDENCIES =  freer.$(oext) \
-@USE_LIBTOOL_TRUE@reallocr.$(oext) callocr.$(oext) cfreer.$(oext) \
-@USE_LIBTOOL_TRUE@malignr.$(oext) vallocr.$(oext) pvallocr.$(oext) \
-@USE_LIBTOOL_TRUE@mallinfor.$(oext) mallstatsr.$(oext) msizer.$(oext) \
-@USE_LIBTOOL_TRUE@malloptr.$(oext) mallocr.$(oext)
+@USE_LIBTOOL_TRUE@libstdlib_la_DEPENDENCIES = 
 @USE_LIBTOOL_TRUE@libstdlib_la_OBJECTS =  __adjust.lo __exp10.lo \
 @USE_LIBTOOL_TRUE@__ten_mu.lo abort.lo abs.lo assert.lo atexit.lo \
-@USE_LIBTOOL_TRUE@atof.lo atoff.lo atoi.lo atol.lo bsearch.lo calloc.lo \
-@USE_LIBTOOL_TRUE@div.lo drand48.lo dtoa.lo dtoastub.lo ecvtbuf.lo \
-@USE_LIBTOOL_TRUE@efgcvt.lo environ.lo envlock.lo eprintf.lo erand48.lo \
-@USE_LIBTOOL_TRUE@exit.lo getenv.lo getenv_r.lo getopt.lo jrand48.lo \
-@USE_LIBTOOL_TRUE@labs.lo lcong48.lo ldiv.lo ldtoa.lo lrand48.lo \
-@USE_LIBTOOL_TRUE@malign.lo malloc.lo mblen.lo mblen_r.lo mbstowcs.lo \
-@USE_LIBTOOL_TRUE@mbstowcs_r.lo mbtowc.lo mbtowc_r.lo mlock.lo mprec.lo \
-@USE_LIBTOOL_TRUE@mrand48.lo msize.lo mstats.lo mtrim.lo nrand48.lo \
-@USE_LIBTOOL_TRUE@putenv.lo putenv_r.lo qsort.lo rand.lo rand48.lo \
-@USE_LIBTOOL_TRUE@rand_r.lo realloc.lo seed48.lo setenv.lo setenv_r.lo \
-@USE_LIBTOOL_TRUE@srand48.lo strdup.lo strdup_r.lo strtod.lo strtol.lo \
-@USE_LIBTOOL_TRUE@strtoll.lo strtoll_r.lo strtoul.lo strtoull.lo \
-@USE_LIBTOOL_TRUE@strtoull_r.lo system.lo valloc.lo wcstombs.lo \
-@USE_LIBTOOL_TRUE@wcstombs_r.lo wctomb.lo wctomb_r.lo
+@USE_LIBTOOL_TRUE@atof.lo atoff.lo atoi.lo atol.lo bsearch.lo div.lo \
+@USE_LIBTOOL_TRUE@drand48.lo dtoa.lo dtoastub.lo ecvtbuf.lo efgcvt.lo \
+@USE_LIBTOOL_TRUE@environ.lo envlock.lo eprintf.lo erand48.lo exit.lo \
+@USE_LIBTOOL_TRUE@getenv.lo getenv_r.lo getopt.lo jrand48.lo labs.lo \
+@USE_LIBTOOL_TRUE@lcong48.lo ldiv.lo ldtoa.lo lrand48.lo mblen.lo \
+@USE_LIBTOOL_TRUE@mblen_r.lo mbstowcs.lo mbstowcs_r.lo mbtowc.lo \
+@USE_LIBTOOL_TRUE@mbtowc_r.lo mlock.lo mprec.lo mrand48.lo msize.lo \
+@USE_LIBTOOL_TRUE@mtrim.lo nrand48.lo putenv.lo putenv_r.lo qsort.lo \
+@USE_LIBTOOL_TRUE@rand.lo rand48.lo rand_r.lo seed48.lo setenv.lo \
+@USE_LIBTOOL_TRUE@setenv_r.lo srand48.lo strdup.lo strdup_r.lo \
+@USE_LIBTOOL_TRUE@strtod.lo strtol.lo strtoll.lo strtoll_r.lo \
+@USE_LIBTOOL_TRUE@strtoul.lo strtoull.lo strtoull_r.lo system.lo \
+@USE_LIBTOOL_TRUE@valloc.lo wcstombs.lo wcstombs_r.lo wctomb.lo \
+@USE_LIBTOOL_TRUE@wctomb_r.lo
 CFLAGS = @CFLAGS@
 COMPILE = $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -299,7 +177,7 @@ DIST_COMMON =  Makefile.am Makefile.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 SOURCES = $(lib_a_SOURCES) $(libstdlib_la_SOURCES)
 OBJECTS = $(lib_a_OBJECTS) $(libstdlib_la_OBJECTS)
@@ -511,42 +389,6 @@ objectlist.awk.in: $(noinst_LTLIBRARIES)
 	do \
 	  echo $$i `pwd`/$$i >> objectlist.awk.in ; \
 	done
-
-mallocr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_MALLOC -c $(srcdir)/mallocr.c -o $@
-
-freer.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_FREE -c $(srcdir)/mallocr.c -o $@
-
-reallocr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_REALLOC -c $(srcdir)/mallocr.c -o $@
-
-callocr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_CALLOC -c $(srcdir)/mallocr.c -o $@
-
-cfreer.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_CFREE -c $(srcdir)/mallocr.c -o $@
-
-malignr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_MEMALIGN -c $(srcdir)/mallocr.c -o $@
-
-vallocr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_VALLOC -c $(srcdir)/mallocr.c -o $@
-
-pvallocr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_PVALLOC -c $(srcdir)/mallocr.c -o $@
-
-mallinfor.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_MALLINFO -c $(srcdir)/mallocr.c -o $@
-
-mallstatsr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_MALLOC_STATS -c $(srcdir)/mallocr.c -o $@
-
-msizer.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_MALLOC_USABLE_SIZE -c $(srcdir)/mallocr.c -o $@
-
-malloptr.$(oext): mallocr.c
-	$(MALLOC_COMPILE) -DDEFINE_MALLOPT -c $(srcdir)/mallocr.c -o $@
 
 .c.def:
 	$(CHEW) < $< > $*.def 2> $*.ref
